--- a/content/chapter1.tex
+++ b/content/chapter1.tex
@@ -7,6 +7,9 @@
 \subsection{需要的理论依据}
 理论名称\footnote{最早由......提出}......
 
+插入超链接的方式1：\href{http://www.baidu.com}{百度}。 \par
+插入超链接的方式2：\url{https://github.com/ToryDeng/ZUEL-Thesis}
+
 \subsection{研究假设}
 ......解释一下怎么构思的假设，本文在上述分析基础上提出假设1。
 
