--- a/content/chapter2.tex
+++ b/content/chapter2.tex
@@ -4,7 +4,8 @@
 %引用及公式撰写介绍：交叉引用公式、图表使用ref，公式在align环境中，文献引用用cite
 指数由\ref{eq}表示为：
 \begin{align}
-taier_{it}=\sum_{j = 1}^{2}\frac{I_{i,j,t}}{I_{i,t}}\ln\left[\left(\frac{I_{i,j,t}}{I_{i,t}}\right)/\left(\frac{P_{i,j,t}}{P_{i,t}}\right)\right]\label{eq}
+ x &=t+\cos(t)  + 1 \label{eq:cos}  \\
+    y &=2\sin(t)\label{eq}
 \end{align}
 
 
